--- a/app/views/members/_challenge.html.haml
+++ b/app/views/members/_challenge.html.haml
@@ -4,7 +4,7 @@
       .box-t
         .col-left.fl
           %h4
-            %a{:href => challenge_url(challenge["ID__c"])}= challenge["Name"]
+            %a{:href => challenge_url(challenge["Challenge_Id__c"])}= challenge["Name"]
           %p= "#{truncate(challenge["Description__c"].gsub(/<\/?[^>]*>/, ""), :length => 300, :separator => ' ')}"
         .col-right.fr
           %p
