--- a/app/views/challenges/_challenge-sidebar.html.erb
+++ b/app/views/challenges/_challenge-sidebar.html.erb
@@ -1,6 +1,10 @@
 <ul>
 	<li><h2><span><%= @challenge_detail["Name"] %></span></h2></li>
-	<li><h3>Time Left For Submission</h3><h2><span><%= format_close_date_time(@challenge_detail['End_Date__c']) %></span></h2></li>
+	<% if Time.parse(@challenge_detail['End_Date__c']).past? && !['Created','Hidden'].include?(@challenge_detail['Status__c']) %>
+		<li><h3>Status</h3><h2><span><%= @challenge_detail['Status__c'] %></span></h2></li>
+	<% else %>
+		<li><h3>Time Left For Submission</h3><h2><span><%= format_close_date_time(@challenge_detail['End_Date__c']) %></span></h2></li>
+	<% end %>
 	<li><h3>Top Prize</h3><h2><span><%= @challenge_detail["Top_Prize__c"] %></span></h2></li>
 	<li><h3>Prizes</h3>
 		<ul>
