added blog fodder generator

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -3,6 +3,8 @@
 </div>
 
 <div class="page-padding">
+	
+	<p><a href="/admin/blogfodder/0">Blog fodder</a> - Headstart for writing blog entries for a completed challenge.</p>
 		
 	<p><a href="/admin/display_users">Display users</a> - Displays all users currently in pg.</p>
 	
