--- a/app/views/challenges/recent.html.erb
+++ b/app/views/challenges/recent.html.erb
@@ -38,6 +38,7 @@
                 </div>
 			<% end %>
             </div>
+			<br><a href="/challenges/feed/recent" class="get-rss fl">Subscribe to the feed for this set of challenges</a>
         </div>
     </div>
 </div>
