fixed rss link in mailer

--- a/app/views/member_mailer/welcome_email.html.erb
+++ b/app/views/member_mailer/welcome_email.html.erb
@@ -24,7 +24,7 @@
 	<h3>Stay up to date on our latest development challenges for money, prizes and badges:</h3>
 	<ul>
 		<li><a href="http://feedburner.google.com/fb/a/mailverify?uri=cloudspokes/contests/all">Subscribe to our email list</a> to receive a summary of our latest challenges</li>
-		<li><a href="http://www.cloudspokes.com/contests.rss">Subscribe to our RSS feed</a> for new challenges
+		<li>Subscribe to our RSS feed for <a href="http://www.cloudspokes.com/challenges/feed">new, open challenges</a> or <a href="http://www.cloudspokes.com/challenges/feed/recent">recently completed ones</a>.
 		<li>Watch the <a href="http://blog.cloudspokes.com">CloudSpokes Blog</a> for the latest info, submission results and videos</li>
 	</ul>
 	
