--- a/app/views/content/welcome.html.erb
+++ b/app/views/content/welcome.html.erb
@@ -1,1 +1,20 @@
 <%= raw(@page["html"])%>
+
+<!-- Google Code for Cloudspokes Sign-Up Conversion Page -->
+<script type="text/javascript">
+/* <![CDATA[ */
+var google_conversion_id = 1064594833;
+var google_conversion_language = "en";
+var google_conversion_format = "3";
+var google_conversion_color = "ffffff";
+var google_conversion_label = "Mr4GCNOhhAIQkdvR-wM";
+var google_conversion_value = 0;
+/* ]]> */
+</script>
+<script type="text/javascript" src="http://www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+<div style="display:inline;">
+<img height="1" width="1" style="border-style:none;" alt="" src="http://www.googleadservices.com/pagead/conversion/1064594833/?label=Mr4GCNOhhAIQkdvR-wM&amp;guid=ON&amp;script=0"/>
+</div>
+</noscript>
