--- a/app/views/challenges/leaderboard.html.erb
+++ b/app/views/challenges/leaderboard.html.erb
@@ -45,7 +45,7 @@
 
                     <div class="column">
                         <h3>All Time</h3>
-						<% if @this_year_leaders.length > 0 %>
+						<% if @all_time_leaders.length > 0 %>
 	                        <%= render :partial => "leaderboard", :locals => { :leaders => @all_time_leaders } %>
 	                        <p class="ac">
 	                            <%= will_paginate @all_time_leaders, :param_name => :page_all %>
