--- a/app/views/challenges/register.html.erb
+++ b/app/views/challenges/register.html.erb
@@ -5,7 +5,7 @@
             <div class="widecolumn fl">
                 <!-- Terms -->
                 <span></span>
-				<p><%= link_to "Back", challenge_path %></p>
+				<p><%= link_to "Back to Challenge Details", challenge_path %></p>
 				<%= flash_messages %>
 				<h3>Challenge Terms and Conditions</h3>
 				<p>You must agree to the terms and conditions of this challenge before competing.</p>
