--- a/app/views/challenges/registrants.html.erb
+++ b/app/views/challenges/registrants.html.erb
@@ -5,7 +5,7 @@
             <div class="widecolumn fl">
                 <!-- Challenge Registrants -->
                 <span></span>
-				<p><%= link_to "Back", challenge_path %></p>
+				<p><%= link_to "Back to Challenge Details", challenge_path %></p>
 				<%= flash_messages %>
 				<% if @registrants.size == 0 %>
 					<div style="text-align: center; padding:50px"><b> No participants for this challenge at this time.</b></div>
