--- a/app/views/challenges/scorecard.html.erb
+++ b/app/views/challenges/scorecard.html.erb
@@ -5,7 +5,7 @@
             <div class="widecolumn fl">
                 <!-- Challenge Registrants -->
                 <span></span>
-				<p><%= link_to "Back", challenge_path %></p>
+				<p><%= link_to "Back to Challenge Details", challenge_path %></p>
 				<%= flash_messages %>
 				<h3>Challenge Scorecard</h3>
 				<p>Here is the weighted criteria that judges will use to score submissions for this challenge.</p>
