--- a/app/views/members/_challenge.html.haml
+++ b/app/views/members/_challenge.html.haml
@@ -8,7 +8,7 @@
           %p= "#{truncate(challenge["Description__c"].gsub(/<\/?[^>]*>/, ""), :length => 300, :separator => ' ')}"
         .col-right.fr
           %p
-            %strong= challenge['Challenge_Participants__r']['records'].first['Place_c'].toi.ordinalize 
+            %strong= challenge['Challenge_Participants__r']['records'].first['Place__c'].toi.ordinalize 
             %br
             = "$#{challenge['Challenge_Participants__r']['records'].first['Money_Awarded__c'].round} for"
             %br
