added text to submissions page

--- a/app/views/challenges/submission.html.erb
+++ b/app/views/challenges/submission.html.erb
@@ -46,7 +46,8 @@
 					<% end %>
 					
 					<h3>Upload Files</h3>
-					<p>Upload any deliverables for your challenge submission. This can be a zip file containing your code, a Word or text file containing instructions, a movie or image.</p>
+					<p>Upload any deliverables for your challenge submission. This can be a zip file containing your code, a Word or text file containing instructions, a movie or image.
+					<b>Please do not embed any files in Word docs as we cannot access them. Upload them as files separately.</b></p>
 					
 					<div class="post-submission">
 						<fieldset>
