fixed display of social network icons

--- a/app/views/accounts/public_profile.html.erb
+++ b/app/views/accounts/public_profile.html.erb
@@ -90,23 +90,23 @@
 				<div class="spacer"></div>
 				
 				<label>Site / Blog:</label>
-				<input name="form_profile[Website__c]" value="<%= @account["Website__c"]%>" class="field" style="width: 300px">
+				<input name="form_profile[Website__c]" value="<%= @account["Website__c"]%>" class="field" style="width: 400px">
 				<div class="spacer"></div>
 				
-				<label>Twitter:</label>
+				<label>Twitter Username:</label>
 				<input name="form_profile[Twitter__c]" value="<%= @account["Twitter__c"]%>" class="field">
 				<div class="spacer"></div>
 				
-				<label>GitHub:</label>
+				<label>GitHub Username:</label>
 				<input name="form_profile[Github__c]" value="<%= @account["Github__c"]%>" class="field">
 				<div class="spacer"></div>
 				
-				<label>Facebook:</label>
-				<input name="form_profile[Facebook__c]" value="<%= @account["Facebook__c"]%>" class="field">
+				<label>Facebook URL:</label>
+				<input name="form_profile[Facebook__c]" value="<%= @account["Facebook__c"]%>" class="field" style="width: 400px">
 				<div class="spacer"></div>
 				
-				<label>LinkedIn:</label>
-				<input name="form_profile[LinkedIn__c]" value="<%= @account["LinkedIn__c"]%>" class="field" style="width: 300px">
+				<label>LinkedIn URL:</label>
+				<input name="form_profile[LinkedIn__c]" value="<%= @account["LinkedIn__c"]%>" class="field" style="width: 400px">
 				<div class="spacer"></div>
 				<% end %>
 				
